--- a/config.ini
+++ b/config.ini
@@ -3,11 +3,12 @@ main_directory: /Users/maria-esthervidal/Documents/docker/rdfizer/rdfizer/1-csv
 
 [datasets]
 number_of_datasets: 1
-output_folder: ${default:main_directory}/graph
+output_folder: /Users/maria-esthervidal/Documents/docker/KGCreation/graph
+enrichment: yes
 remove_duplicate: yes
 name: 1-csv
+all_in_one_file: no
 
 [dataset1]
 name: 1-csv
 mapping: ${default:main_directory}/gtfs-csv.rml.ttl
-remove_duplicate_triples_in_memory: no
